@@ -12,7 +12,6 @@ All of them seem to be post-SG3 issues.
 Rather finalize what's underway and finish the Big Cleanup:
   - Check what can be cut from the xbt
   - "pull" code diffusion in graspe
-  - document the gras' timing macro
   - add a real implementation (even if simplistic) to gras_os_myname
 
 ----
@@ -65,6 +64,8 @@ DONE
      - allow to declare more than one timed section per file (fix a stupid bug)
      - move some private declaration to the right place
      - the chrono module now cleanups its mess on gras exit
+     - merge conditional execution and timing macros into emulation module
+     - document the module
 
  --
 
